# PikaTunnel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  K8S_SETUP.md  README.md  docker-compose.yml  entrypoint.sh  package.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build-and-deploy.yml
apache/: pikatunnel.conf
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_groups.py  003_add_cluster_settings.py  004_add_k8s_ingress_fields.py  005_add_tls_certs_and_lb.py  006_add_proxy_host_header.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  certs.py  cluster.py  health.py  nginx.py  routes.py  streams.py  vpn.py
backend/app/services/: k8s_ingress.py  k8s_service.py  nginx_config.py  oidc.py  vpn_manager.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_auth.py  test_health.py  test_k8s_ingress.py  test_routes.py  test_streams.py
examples/: pritunl-migration-onprem-routes.csv
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  certs.ts  client.ts  cluster.ts  nginx.ts  routes.ts  streams.ts  vpn.ts
frontend/src/components/: DataTable.tsx  (+9 more)
nginx/: default.conf  nginx.conf
old-proxies/general-nginx-proxy/: Dockerfile  entrypoint.sh  nginx.conf.template
old-proxies/pritunl-nginx-proxy/: Dockerfile  entrypoint.sh  nginx.conf.template
tinyproxy/: tinyproxy.conf
(+11 files in other folders)
